WinDjView changes history
Copyright (C) 2004-2006 Andrew Zhezherun
----------------------------------------

Changes in version 0.4.2 (2006-):
* Fixed a few various issues.

Changes in version 0.4.1 (2006-02-25):
+ Added an option to select different scaling algorithm
  (slower, but gives better results on low zoom levels).
+ Added support for JPEG-encoded DjVu files.
+ Reduced redrawing when switching documents.
+ Added autoscroll when selecting text by dragging.
+ Rendered pages are reused when entering/exiting fullscreen mode.
+ Added Home/End keyboard shortcuts.
+ Added an option to warn when closing multiple documents.
* Fixed saving and restoring maximized main window state.
* Fixed displaying floating-point numbers in non-English locales.
* Fixed text selection when a page has nonzero original rotation.
* Fixed page caching (caused high CPU and memory usage in some situations).
* Fixed displaying tooltips for annotations in fullscreen mode.

Changes in version 0.4 (2006-01-18):
! Unicode build for Windows 2k/XP.
! Added support for switching user interface languages.
! Added facing and continuous-facing page layouts.
+ Added support for hilighted annotations.
+ Display mode and/or zoom specified in the document are used when opening.
+ Improved page display (borders and background).
+ In fullscreen mode cursor is hidden if mouse doesn't move for a few seconds.
+ Printer settings are retained while application is running.
+ To quickly enter drag more, shift key can be pressed.
* Fixed a problem with WinDjView not responding for a few seconds
  after opening a document on some systems.
* Fixed a few crashes in print dialog.

Changes in version 0.3.6 (2005-12-21):
! Multithreading fixes: WinDjView should work more stable, especially
  on multicore, multiprocessor and hyperthreaded systems.
+ Print dialog now takes into account physical printer margins
  by default; added an option to ignore them (old behavior).