@@ -3,7 +3,9 @@ Copyright (C) 2004-2006 Andrew Zhezherun
 ----------------------------------------
 
 Changes in version 0.4.2 (2006-):
-* Fixed a few various issues.
+* Fixed Open File dialog (.djv files were not displayed).
+* Fixed a problem with XP when themes are turned off.
+* Fixed a few minor issues.
 
 Changes in version 0.4.1 (2006-02-25):
 + Added an option to select different scaling algorithm
